--- a/tasks/main-pkg.yml
+++ b/tasks/main-pkg.yml
@@ -10,10 +10,9 @@
 - get_url: url=https://storage.googleapis.com/golang/go{{ go_version }}.linux-amd64.tar.gz mode=0644
   args:
     dest: /tmp/go{{ go_version }}.linux-amd64.tar.gz
-#    version 1.4.2
-#    sha256sum: 141b8345932641483c2437bdbd65488a269282ac85f91170805c273f03dd223b
 
 - copy: src=go{{ go_version }}.linux-amd64.tar.gz.sha1 dest=/tmp/go{{ go_version }}.linux-amd64.tar.gz.sha1
+  when: go_checksum == True
   args:
     owner: root
     group: root
@@ -21,18 +20,29 @@
 
 - name: checksum sha1
   shell: sha1sum go{{ go_version }}.linux-amd64.tar.gz.sha1 -c
+  when: go_checksum == True
   args:
     chdir: /tmp
-    creates: /usr/local/go
+    creates: /usr/local/go/bin
 
-- file: path=/usr/local/go state=directory mode=0644
-
-- unarchive: src=/tmp/go{{ go_version }}.linux-amd64.tar.gz dest=/usr/local/go
+- unarchive: src=/tmp/go{{ go_version }}.linux-amd64.tar.gz dest=/usr/local
   args:
     copy: no
-    creates: /usr/local/go
+    creates: /usr/local/go/bin
+    group: "{{ go_group }}"
 
+# Path for BASH
 - lineinfile: dest=/etc/profile regexp="^export PATH=\$PATH:\/usr\/local\/go\/bin"
+  args:
+    line: "export PATH=$PATH:/usr/local/go/bin"
+    state: present
+
+# Path for ZSH (if available)
+- stat: path=/etc/zsh/zlogin
+  register: go_zlogin
+
+- lineinfile: dest=/etc/zsh/zlogin regexp="^export PATH=\$PATH:\/usr\/local\/go\/bin"
+  when: go_zlogin.stat.exists == True
   args:
     line: "export PATH=$PATH:/usr/local/go/bin"
     state: present
