--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,34 @@
 ---
-# defaults file for go
 
-go_version: 1.7.4
+# Go
+go_install_go: true
+go_version: 1.8.3
 go_uninstall_previous: false
 go_group: staff
 go_checksum: True
+
+# Gnome
+go_install_gnome: false
+go_configure_gnome: false
+go_gnome_users: []
+
+# Atom
+go_install_atom: false
+go_atom_version: 1.18.0
+go_atom_packages:
+  - atom-beautify
+  - busy-signal
+  - file-icons
+  - go-debug
+  - go-plus
+  - go-signature-statusbar
+  - hyperclick
+  - intentions
+  - linter
+  - linter-golinter
+  - linter-ui-default
+  - minimap
+  - platformio-ide-terminal
+  - tabs-to-spaces
+#  - vim-mode-plus
+go_atom_users: []
