--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,3 +2,39 @@
 # tasks file for go
 
 - include: main-pkg.yml
+  when: go_install_go
+
+# Install GNOME Desktop
+- apt: name=gnome state=present update_cache=yes
+  when: go_install_gnome
+
+# Atom
+- include: atom.yml
+  with_items: "{{ go_atom_users }}"
+  loop_control:
+      loop_var: go_atom_become_user
+  when: go_install_atom
+
+- name: Change GNOME favorites
+  shell: dconf write /org/gnome/shell/favorite-apps "['iceweasel.desktop', 'org.gnome.Nautilus.desktop', 'atom.desktop', 'gnome-terminal.desktop']"
+
+- copy:
+    src: debian.jpg
+    dest: ~/debian.jpg
+    owner: "{{ item }}"
+    group: "{{ item }}"
+    mode: "u=rw,g=r,o=r"
+  become_user: "{{ item }}"
+  with_items: "{{ go_gnome_users }}"
+  when: go_configure_gnome
+
+
+- shell: gsettings set org.gnome.desktop.background picture-uri file:///home/{{ item }}/debian.jpg
+  become_user: "{{ item }}"
+  with_items: "{{ go_gnome_users }}"
+  when: go_configure_gnome
+
+- shell: gsettings set org.gnome.desktop.screensaver picture-uri file:///home/{{ item }}/debian.jpg
+  become_user: "{{ item }}"
+  with_items: "{{ go_gnome_users }}"
+  when: go_configure_gnome
